@@ -1,5 +1,6 @@
 2.0b3:
 	Fix build problem with spf
+	Fix bad DESTDIR specification for /etc/mail
 2.0b2:
 	Check if -D_REENTRANT is needed for localtime_r and friends
 	Typo in delayedreject 
